--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   styled_text: ^3.0.3
   auto_size_text_pk: ^3.0.0
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/imagens/p.jpg
+    - assets/imagens/app.bolo.jpeg
+    - assets/imagens/app.jap.jpeg
+    - assets/imagens/app.kam.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
